# applyluma

./: .env.example  .gitattributes  .gitignore  .graphifyignore  CLAUDE.md  CONTRIBUTING.md  FEATURE_IDEAS.md  GEMINI.md  HEALTH_CHECK_REPORT.md  MOBILE_ENHANCEMENT_PLAN.md  PHASE7_ANALYTICS_TEST_RESULTS.md  PHASE_10B_PLAN.md  Phase_10_Execution_Plan.md  README.md  claude.md  docker-compose.yml  package-lock.json  test_analytics_endpoints.sh
backend/: .env.production.example  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.beat.json  railway.tailor-worker.json  railway.toml  railway.worker.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0005_add_applications_tables.py  0006_add_stripe_fields_to_users.py  0007_add_notifications_table.py  0008_phase_10a_tables.py  0009_application_raw_job_link.py  0010_jd_source_raw_job.py  0011_user_alert_preferences.py  0012_add_interview_date.py  0013_add_verification_token.py  0014_add_deadline_to_applications.py  0015_add_password_reset_token.py  0016_add_cover_letter_jobs.py  0017_add_missing_fk_indexes.py  0018_cv_one_default_per_user.py  0019_add_is_remote_to_raw_job_postings.py  0019_performance_indexes.py  0020_add_google_oauth_to_users.py  0021_merge_saved_jobs_into_jd.py  0022_add_pipeline_run_log.py  0023_stale_reminder_and_indexes.py  0024_raw_job_application_deadline.py  0025_add_admin_audit_log.py  0026_add_contact_submissions.py  0027_contact_submission_feedback.py  0028_ai_usage_logs.py  0029_admin_user_controls.py  0030_user_preferred_template.py  0031_oauth_provider_ids.py  a1b2c3d4e5f6_add_job_market_tables.py  a46df757d16a_auto_verify_existing_users.py  b5d9f3c2e1a7_add_user_role.py  c3e7b4a91f20_initial.py  c6e1a8d4f2b0_add_tailor_jobs.py  d4f8e2b1c9a3_add_cv_filename.py  f6b2c8d4e1a5_add_jd_keywords.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  ai.py  alert_preferences.py  analytics.py  applications.py  auth.py  auth_github.py  auth_google.py  auth_linkedin.py  billing.py  contact.py  cover_letters.py  cvs.py  feedback.py  health.py  job_bookmark.py  job_descriptions.py  job_search.py  jobs.py  notifications.py  oauth_common.py  saved_jobs.py  tailor.py
backend/app/core/: cache_service.py  config.py  dependencies.py  logging_config.py  password_policy.py  security.py
backend/app/crud/: admin.py  alert_preferences.py  application.py  cover_letter_job.py  cv.py  job.py  job_description.py  notification.py  tailor_job.py  user.py
backend/app/db/: base.py
backend/app/db/queries/: analytics_queries.py
backend/app/models/: __init__.py  admin_audit_log.py  ai_usage_log.py  alert_preferences.py  application.py  application_contact.py  application_event.py  contact_submission.py  cover_letter_job.py  cv.py  job.py  job_description.py  notification.py  tailor_job.py  user.py
backend/app/schemas/: admin.py  alert_preferences.py  analytics.py  application.py  application_analytics.py  billing.py  contact.py  cover_letter.py  cv.py  job.py  job_description.py  job_search.py  notification.py  tailor.py  token.py  user.py
backend/app/services/: adzuna_service.py  ai_service.py  ai_usage.py  cover_letter_service.py  cv_completeness.py  cv_parser.py  email_service.py  keyword_extractor.py  matching_service.py  notification_service.py  pdf_generator.py  platsbanken_search_service.py  tailor_service.py  url_scraper.py
backend/app/services/cv_render/: __init__.py  context.py  renderer.py  structure.py
backend/app/services/cv_render/templates/: atlas.html  classic.html  modern.html  (+9 more)
backend/app/tasks/: celery_app.py  cover_letter.py  matching.py  notifications.py  sample.py  tailor.py  watchdog.py
backend/scripts/: backfill_discover.py  start-beat.sh  start-web.sh  start-worker-ai.sh  start-worker.sh  verify_discover.py
backend/storage/cvs/e98457aa-987c-4bc6-97ca-679dfacec5a7/: 4ba36392-d6cc-4ee2-849b-a3d1815e6c62.docx
backend/tests/: test_admin_endpoints.py  test_admin_user_controls.py  test_ai_costs.py  test_alert_preferences_crud.py  test_alert_preferences_endpoint.py  test_analytics_endpoints.py  test_analytics_legacy_endpoints.py  test_analyze_text.py  test_application_analytics.py  test_application_crud.py  test_application_endpoints.py  test_auth_github.py  test_auth_google.py  test_auth_linkedin.py  test_auth_security.py  test_billing_endpoints.py  test_celery_resilience.py  test_celery_routing.py  test_celery_tasks.py  test_contact_endpoints.py  test_cover_letter_endpoints.py  test_cover_letter_job_crud.py  test_cv_completeness.py  test_cv_endpoints.py  test_cv_history_endpoints.py  test_cv_render.py  test_email_service.py  test_extension_support.py  test_feedback_endpoints.py  test_health_endpoints.py  test_jd_endpoints.py  test_job_bookmark_endpoint.py  test_job_crud.py  test_job_search_endpoints.py  test_jobs_endpoints.py  test_keyword_extractor.py  test_magic_link.py  test_matching_service.py  test_matching_task.py  test_notification_crud.py  (+13 more)
backend/tests/fixtures/: source_cv.json  source_cv_swedish.json
(+341 files in other folders)
