[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "applyluma-backend"
version = "0.1.0"
description = "ApplyLuma backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=3.2.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "email-validator>=2.2.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "reportlab>=4.2.0",
    "langdetect>=1.0.9",
    "Pillow>=10.0.0",
    "stripe>=10.0.0",
    "resend>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "B008",  # Depends() in default args is idiomatic FastAPI
    "E501",  # line-too-long — enforced by formatter, not linter
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Baseline exclusions: existing modules grandfathered before mypy was enforced in CI.
# Remove entries here as each module is progressively annotated.
[[tool.mypy.overrides]]
module = [
    "app.api.v1.endpoints.ai",
    "app.api.v1.endpoints.alert_preferences",
    "app.api.v1.endpoints.analytics.company_insights",
    "app.api.v1.endpoints.analytics.comparison",
    "app.api.v1.endpoints.analytics.experience_levels",
    "app.api.v1.endpoints.analytics.hiring_patterns",
    "app.api.v1.endpoints.analytics.industry_breakdown",
    "app.api.v1.endpoints.analytics.job_market_health",
    "app.api.v1.endpoints.analytics.job_type_mix",
    "app.api.v1.endpoints.analytics.location_trends",
    "app.api.v1.endpoints.analytics.salary_by_skill",
    "app.api.v1.endpoints.analytics.salary_insights",
    "app.api.v1.endpoints.analytics.skill_demand",
    "app.api.v1.endpoints.analytics.trending_skills",
    "app.api.v1.endpoints.applications",
    "app.api.v1.endpoints.auth",
    "app.api.v1.endpoints.billing",
    "app.api.v1.endpoints.cover_letters",
    "app.api.v1.endpoints.cvs",
    "app.api.v1.endpoints.job_descriptions",
    "app.api.v1.endpoints.job_search",
    "app.api.v1.endpoints.jobs",
    "app.api.v1.endpoints.notifications",
    "app.api.v1.endpoints.saved_jobs",
    "app.api.v1.endpoints.tailor",
    "app.core.cache_service",
    "app.core.dependencies",
    "app.core.security",
    "app.crud.admin",
    "app.crud.job",
    "app.crud.tailor_job",
    "app.main",
    "app.models.job",
    "app.schemas.job",
    "app.services.adzuna_service",
    "app.services.cover_letter_service",
    "app.services.keyword_extractor",
    "app.services.matching_service",
    "app.services.notification_service",
    "app.services.pdf_generator",
    "app.services.tailor_service",
    "app.services.url_scraper",
    "app.tasks.cover_letter",
    "app.tasks.matching",
    "app.tasks.notifications",
    "app.tasks.sample",
    "app.tasks.tailor",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
